update: layout updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": [
     ".eslintrc.cjs",
