--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.2.1",
+    "@types/tailwindcss": "^3.1.0",
+    "chroma-js": "^2.4.2",
+    "chroma.ts": "^1.0.10",
+    "color": "^4.2.3",
+    "color-namer": "^1.4.0",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind": "^4.0.0",
+    "tailwind-colors": "^1.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/chroma-js": "^2.4.0",
+    "@types/color": "^3.0.3",
+    "@types/color-namer": "^1.3.0",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
