refactor: modified chroma-js module type definitions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,8 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "./src/*"
-      ]
+      "@/*": ["./*"],
+      "@/components/*": ["components/*"]
     },
     "plugins": [
       {
