--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/tailwindcss": "^3.1.0",
     "chroma-js": "^2.4.2",
-    "chroma.ts": "^1.0.10",
-    "color": "^4.2.3",
     "color-namer": "^1.4.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,7 +27,6 @@
   },
   "devDependencies": {
     "@types/chroma-js": "^2.4.0",
-    "@types/color": "^3.0.3",
     "@types/color-namer": "^1.3.0",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
