--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/chroma-js": "^2.4.0",
     "@types/tailwindcss": "^3.1.0",
+    "@vercel/analytics": "^1.0.1",
     "chroma-js": "^2.4.2",
     "color-namer": "^1.4.0",
     "jest": "^29.5.0",
